--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="5000">
-          <img src="img/4.jpg" class="d-block ms-auto me-auto rounded-4" alt="..." width="88%" height="550" />
+          <img src="img/4.jpg" class="d-block ms-auto me-auto rounded-4" alt="..." width="90%" height="550" />
           <div class="carousel-caption d-none d-md-block">
             <h4 style="color: rgb(255, 255, 255)">Pantai Jebring</h4>
             <p>Alamat: Banyuurip, Ngadipuro, Wonotirto, Blitar, Jawa Timur</p>
@@ -53,7 +53,7 @@
           </div>
         </div>
         <div class="carousel-item" data-bs-interval="5000">
-          <img src="img/5.jpg" class="d-block ms-auto me-auto rounded-4" alt="..." width="88%" height="550" />
+          <img src="img/5.jpg" class="d-block ms-auto me-auto rounded-4" alt="..." width="90%" height="550" />
           <div class="carousel-caption d-none d-md-block">
             <h4 style="color: rgb(255, 255, 255)">Perkebunan Teh Sirah Kencong</h4>
             <p>Alamat: Pkb. Sirahkencong, Ngadirenggo, Wlingi, Blitar, Jawa Timur 66184</p>
@@ -61,7 +61,7 @@
           </div>
         </div>
         <div class="carousel-item" data-bs-interval="5000">
-          <img src="img/6.jpg" class="d-block ms-auto me-auto rounded-4" alt="..." width="88%" height="550" />
+          <img src="img/6.jpg" class="d-block ms-auto me-auto rounded-4" alt="..." width="90%" height="550" />
           <div class="carousel-caption d-none d-md-block">
             <h4 style="color: rgb(255, 255, 255)">Bukit Teletubies</h4>
             <p>Alamat: Sumberasri, Nglegok, Sumberasri, Nglegok, Blitar, Jawa Timur 66181</p>
@@ -69,7 +69,7 @@
           </div>
         </div>
         <div class="carousel-item" data-bs-interval="5000">
-          <img src="img/7.jpg" class="d-block ms-auto me-auto rounded-4" alt="..." width="88%" height="550" />
+          <img src="img/7.jpg" class="d-block ms-auto me-auto rounded-4" alt="..." width="90%" height="550" />
           <div class="carousel-caption d-none d-md-block">
             <h4 style="color: rgb(255, 255, 255)">Air Terjun Grenjeng</h4>
             <p>Alamat: Kalibentak, Panggungrejo, Blitar, Jawa Timur</p>
@@ -143,7 +143,7 @@
     <!-- Post End -->
 
     <!-- About -->
-    <section id="about" class="mt-5 pt-5">
+    <section id="about" class="mt-5 p-5">
       <div class="container">
         <div class="row justify-content-center mb-3">
           <div class="col text-center text-light">
@@ -155,9 +155,9 @@
             <img src="img/anime.png" class="img-fluid rounded-circle" alt="" width="200" height="200" />
           </div>
         </div>
-        <div class="row justify-content-center mt-3 rounded-pill p-5 bg-secondary bg-opacity-75 text-light">
+        <div class="row justify-content-center mt-3 rounded-4 p-5 bg-secondary bg-opacity-75 text-light">
           <div class="col-md-4">
-            <h4 class="mb-3 text-center text-dark">Skills</h4>
+            <h4 class="mb-2 text-center text-dark">Skills</h4>
             <label for="html" class="fw-bold">HTML</label>
             <div class="progress">
               <div class="progress-bar" id="html" role="progressbar" aria-label="Basic example" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
@@ -167,20 +167,20 @@
               <div class="progress-bar" id="css" role="progressbar" aria-label="Basic example" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
             </div>
             <label for="js" class="mt-2 fw-bold">JavaScript</label>
-            <div class="progress">
+            <div class="progress mb-3">
               <div class="progress-bar" id="js" role="progressbar" aria-label="Basic example" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">30%</div>
             </div>
           </div>
           <div class="col-md-4 text-center">
-            <h4 class="mb-4 text-dark">Profile</h4>
+            <h4 class="mb-2 text-dark">Profile</h4>
             <div class="profile">
               <h5 style="font-weight: 600">Hanif Aji Prasetyo</h5>
               <h5 style="font-weight: 400">Blitarian</h5>
-              <h5 style="font-weight: 200">Informatic Student | Politeknik Negeri Malang</h5>
+              <h5 style="font-weight: 200" class="mb-3">Informatic Student | Politeknik Negeri Malang</h5>
             </div>
           </div>
           <div class="col-md-4 text-center">
-            <h4 class="mb-4 text-dark">Hobbies</h4>
+            <h4 class="mb-2 text-dark">Hobbies</h4>
             <h5 style="font-weight: 500">Gaming</h5>
             <h5 style="font-weight: 500">Watch Movies</h5>
             <h5 style="font-weight: 500">Sleep</h5>
@@ -191,7 +191,7 @@
     <!-- About End -->
 
     <!-- Contact -->
-    <section id="contact" class="mt-5 p-5 rounded-pill" style="background-color: rgba(207, 204, 204, 0.877)">
+    <section id="contact" class="mt-5 p-5 rounded-5" style="background-color: rgba(207, 204, 204, 0.877)">
       <div class="container">
         <div class="row justify-content-center mb-3">
           <div class="col text-center"><h3>Contact Me</h3></div>
