--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>NusantaraKu | Blitar</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
     <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet" />
@@ -11,11 +10,12 @@
     <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="style.css" />
+    <title>NusantaraKu | Blitar</title>
   </head>
 
   <body style="height: 100vh; background-image: url(img/bg7.jpg)">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg fw-bold fs-5 fixed-top pb-1 navbar-dark">
+    <nav class="navbar navbar-expand-lg fw-bold fs-5 fixed-top navbar-dark">
       <div class="container">
         <a class="navbar-brand text-danger" href="#"><i>Nusan</i><i class="text-white">taraKu</i></a>
         <button class="navbar-toggler bg-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,16 +24,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link link-light" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#post">Post</a>
+              <a class="nav-link link-light" href="#post">Post</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
+              <a class="nav-link link-light" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact</a>
+              <a class="nav-link link-light" href="#contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -46,7 +46,7 @@
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="5000">
           <img src="img/4.jpg" class="d-block ms-auto me-auto rounded-4" alt="..." width="90%" height="550" />
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption d-md-block">
             <h4 style="color: rgb(255, 255, 255)">Pantai Jebring</h4>
             <p>Alamat: Banyuurip, Ngadipuro, Wonotirto, Blitar, Jawa Timur</p>
             <a href="#post1" class="text-decoration-none fw-bold" style="color: rgb(75, 157, 224)">Read More <i class="bi bi-arrow-down"></i></a>
@@ -54,7 +54,7 @@
         </div>
         <div class="carousel-item" data-bs-interval="5000">
           <img src="img/5.jpg" class="d-block ms-auto me-auto rounded-4" alt="..." width="90%" height="550" />
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption d-md-block">
             <h4 style="color: rgb(255, 255, 255)">Perkebunan Teh Sirah Kencong</h4>
             <p>Alamat: Pkb. Sirahkencong, Ngadirenggo, Wlingi, Blitar, Jawa Timur 66184</p>
             <a href="#post2" class="text-decoration-none fw-bold" style="color: rgb(75, 157, 224)">Read More <i class="bi bi-arrow-down"></i></a>
@@ -62,7 +62,7 @@
         </div>
         <div class="carousel-item" data-bs-interval="5000">
           <img src="img/6.jpg" class="d-block ms-auto me-auto rounded-4" alt="..." width="90%" height="550" />
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption d-md-block">
             <h4 style="color: rgb(255, 255, 255)">Bukit Teletubies</h4>
             <p>Alamat: Sumberasri, Nglegok, Sumberasri, Nglegok, Blitar, Jawa Timur 66181</p>
             <a href="#post3" class="text-decoration-none fw-bold" style="color: rgb(75, 157, 224)">Read More <i class="bi bi-arrow-down"></i></a>
@@ -70,7 +70,7 @@
         </div>
         <div class="carousel-item" data-bs-interval="5000">
           <img src="img/7.jpg" class="d-block ms-auto me-auto rounded-4" alt="..." width="90%" height="550" />
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption d-md-block">
             <h4 style="color: rgb(255, 255, 255)">Air Terjun Grenjeng</h4>
             <p>Alamat: Kalibentak, Panggungrejo, Blitar, Jawa Timur</p>
             <a href="#post4" class="text-decoration-none fw-bold" style="color: rgb(75, 157, 224)">Read More <i class="bi bi-arrow-down"></i></a>
@@ -89,16 +89,16 @@
     <!-- Carousel End -->
 
     <!-- Post -->
-    <section id="post" class="mt-5 p-5 rounded-5 bg-secondary bg-opacity-50">
+    <section id="post" class="mt-5 p-2 rounded-5 bg-secondary bg-opacity-75">
       <div class="container">
         <div class="row justify-content-center mb-4">
-          <div class="col text-center">
+          <div class="col text-center text-light">
             <h3>POSTS</h3>
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-md-6 text-center" id="post1">
-            <img src="img/4.jpg" alt="" class="mb-2 img-fluid w-100 h-50" style="border-radius: 10px" />
+          <div class="col-md-6 text-center mb-4" id="post1">
+            <img src="img/4.jpg" alt="" class="mb-2 img-fluid" style="border-radius: 10px" />
             <a href="https://jelajahblitar.com/pantai-jebring/" class="text-decoration-none" style="color: rgb(227, 230, 233)"><h4>Pantai Jebring</h4></a>
             <p style="font-weight: 700">Alamat: Banyuurip, Ngadipuro, Wonotirto, Blitar, Jawa Timur</p>
             <p style="text-align: justify; color: aliceblue; font-weight: 400">
@@ -107,8 +107,8 @@
               satu icon pantai jebring adalah batu besar dengan bentuk unik yang ada di pinggir pantainya
             </p>
           </div>
-          <div class="col-md-6 text-center" id="post2">
-            <img src="img/5.jpg" alt="" class="mb-2 img-fluid w-100 h-50" style="border-radius: 10px" />
+          <div class="col-md-6 text-center mb-4" id="post2">
+            <img src="img/5.jpg" alt="" class="mb-2 img-fluid" style="border-radius: 10px" />
             <a href="https://jelajahblitar.com/perkebunan-teh-sirah-kencong/" class="text-decoration-none" style="color: rgb(227, 230, 233)"><h4>Sirah Kencong</h4></a>
             <p style="font-weight: 700">Alamat: Pkb. Sirahkencong, Ngadirenggo, Wlingi, Blitar, Jawa Timur</p>
             <p style="text-align: justify; color: aliceblue; font-weight: 400">
@@ -117,8 +117,8 @@
               tak terlalu banyak pengunjungnya. Sirah Kencong ini juga sangat cocok untuk yang suka dengan kegiatan outdoor
             </p>
           </div>
-          <div class="col-md-6 text-center" id="post3">
-            <img src="img/6.jpg" alt="" class="mb-2 img-fluid w-100 h-50" style="border-radius: 10px" />
+          <div class="col-md-6 text-center mb-4" id="post3">
+            <img src="img/6.jpg" alt="" class="mb-2 img-fluid" style="border-radius: 10px" />
             <a href="https://jelajahblitar.com/bukit-teletubbies-blitar/" class="text-decoration-none" style="color: rgb(227, 230, 233)"><h4>Bukit Teletubies</h4></a>
             <p style="font-weight: 700">Alamat: Sumberasri, Nglegok, Sumberasri, Nglegok, Blitar, Jawa Timur</p>
             <p style="text-align: justify; color: aliceblue; font-weight: 400">
@@ -127,8 +127,8 @@
               tempat wisata ini. Karena ada empat teletubbies yang standby di akhir pekan. Selain bertemu dengan teletubbies, para wisatawan juga bisa menikmati aneka spot foto yang instagramable di bukit teletubbies ini.
             </p>
           </div>
-          <div class="col-md-6 text-center" id="post4">
-            <img src="img/7.jpg" alt="" class="mb-2 img-fluid w-100 h-50" style="border-radius: 10px" />
+          <div class="col-md-6 text-center mb-4" id="post4">
+            <img src="img/7.jpg" alt="" class="mb-2 img-fluid" style="border-radius: 10px" />
             <a href="https://jelajahblitar.com/air-terjun-grenjeng/" class="text-decoration-none" style="color: rgb(227, 230, 233)"><h4>Air Terjun Grenjeng</h4></a>
             <p style="font-weight: 700">Alamat: Kalibentak, Panggungrejo, Blitar, Jawa Timur</p>
             <p style="text-align: justify; color: aliceblue; font-weight: 400">
@@ -191,10 +191,10 @@
     <!-- About End -->
 
     <!-- Contact -->
-    <section id="contact" class="mt-5 p-5 rounded-5" style="background-color: rgba(207, 204, 204, 0.877)">
+    <section id="contact" class="mt-5 p-5 rounded-5 bg-secondary bg-opacity-75">
       <div class="container">
         <div class="row justify-content-center mb-3">
-          <div class="col text-center"><h3>Contact Me</h3></div>
+          <div class="col text-center text-light"><h3>CONTACT ME</h3></div>
         </div>
       </div>
       <div class="row justify-content-center">
